--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ img {
 }
 
 .hero {
-  padding: 188px 472px 292px 472px;
+  /*padding: 188px 472px 292px 472px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -222,25 +222,25 @@ img {
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
 }
 
 .hero-title {
-  font-weight: 700;
+  /*font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
+  text-align: center;
   color: var(--white-color);
-  max-width: 496px;
-  margin-bottom: 48px;
+  /*max-width: 496px;*/
+  /*margin-bottom: 48px;*/
 }
 
 .hero-btn {
   display: block;
   min-width: 169px;
   height: 56px;
-  padding: 16px 32px;
+  /*padding: 16px 32px;*/
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -252,7 +252,7 @@ img {
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  margin-left: 164px;
+  /*margin-left: 164px;*/
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -315,16 +315,18 @@ img {
 }
 
 .benefits {
-  padding: 120px 0;
+  /*padding: 16px 0;*/
 }
 
 .benefits-list {
   display: flex;
   gap: 24px;
+  flex-wrap: wrap;
 }
 
 .benefits-item {
-  width: calc((100% - 72px) / 4);
+  width: 100%;
+  position: relative;
 }
 
 .benefits-icons {
@@ -406,23 +408,29 @@ img {
 }
 
 .our-team {
-  padding: 120px 0;
+  /*padding: 120px 0;*/
   background-color: var(--dark-white-color);
-}
-
-.our-team-images-bkg {
-  width: calc((100% - 72px) / 4);
-  background-color: var(--white-color);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-radius: 0px 0px 4px 4px;
 }
 
 .our-team-images {
   display: flex;
-  gap: 24px;
+  /*gap: 24px;*/
   background-color: var(--dark-white-color);
-  padding-bottom: 120px;
+  /*padding-bottom: 96px;*/
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.our-team-images-bkg {
+  /*width: calc((100% - 72px) / 4);*/
+  /*width: 100%;*/
+  background-color: var(--white-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+  position: relative;
+  overflow: hidden;
 }
 
 .our-team-h_three {
@@ -436,7 +444,8 @@ img {
 }
 
 .our-team-card {
-  padding: 32px 0;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .our-team-icons {
@@ -446,6 +455,8 @@ img {
 }
 
 .our-team-icon {
+  display: flex;
+  gap: 24;
   width: 40px;
   height: 40px;
 }
@@ -488,10 +499,11 @@ img {
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .customers {
-  padding: 120px 0;
+  /*padding: 120px 0;*/
 }
 
 .customers-h_two {
@@ -507,12 +519,19 @@ img {
 
 .customers-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.customers-list svg {
+  margin: 0 auto;
 }
 
 .customers-icons {
-  width: calc((100% - 120px) / 6);
-  height: 88px;
+  /*width: calc((100% - 120px) / 6);*/
+  height: 160px;
+  width: 100%;
 }
 
 .customers-link {
