--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1158px) {
   .benefits-icons {
     display: none;
   }
@@ -20,8 +20,8 @@
     letter-spacing: 0.32px;
   }
 }
-/*--------------------------------------
-@media screen and (max-width: 428px) {
+
+@media screen and (max-width: 768px) {
   .benefits-subtitle {
     display: flex;
     align-items: center;
@@ -47,8 +47,8 @@
   }
 
   .header-logo {
-    margin-top: 25.5px;
-    margin-bottom: 23.5px;
+    margin-top: 26px;
+    margin-bottom: 26px;
   }
 
   .mobile-modal-window {
@@ -151,6 +151,18 @@
     justify-content: center;
   }
 
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-rsolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/people-office-mob-2x.jpg);
+    }
+  }
+
   .hero-title {
     font-size: 36px;
     font-weight: 700;
@@ -200,7 +212,9 @@
   }
 
   .customers-icons {
-    padding-bottom: 56px;
+    width: 190px;
+    height: 88px;
+    margin-bottom: 56px;
   }
 
   .footer-container {
@@ -226,6 +240,10 @@
     margin-bottom: 17.5px;
   }
 
+  .footer-icons {
+    margin-left: 28px;
+  }
+
   .footer-p-soc {
     display: flex;
     justify-content: center;
@@ -235,6 +253,11 @@
     letter-spacing: 0.02em;
     color: var(--white-color);
     margin-bottom: 16px;
+    margin-top: 25px;
+  }
+
+  .footer-p-logo {
+    margin-bottom: 72px;
   }
 
   .subscribe-p {
@@ -285,6 +308,7 @@
     border: none;
     border-radius: 4px;
     margin-top: 16px;
+    margin-left: 116px;
   }
 }
 /*------------------------------------------*/
@@ -318,15 +342,26 @@
     justify-content: center;
   }
 
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-rsolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/people-office-tablet-2x.jpg);
+    }
+  }
+
   .hero-title {
-    display: flex;
     font-size: 56px;
     font-weight: 700;
     line-height: 60px;
     letter-spacing: 1.12px;
     color: var(--white-color);
-    padding-top: 112px;
-    padding-bottom: 72px;
+    padding-top: 0px;
+    padding-bottom: 0px;
     width: 496px;
     max-height: 120px;
     text-align: center;
@@ -355,6 +390,7 @@
   .our-team-images {
     max-width: 552px;
     gap: 24px;
+    margin-left: 92px;
   }
 
   .our-team-images-bkg {
@@ -366,7 +402,7 @@
     padding: 96px 0 96px 0;
   }
 
-  customers > container {
+  .customers > .container {
     max-width: 606px;
   }
 
@@ -376,16 +412,142 @@
 
   .customers-icons {
     width: calc((100% - 48px) / 3);
+    max-width: 168px;
+    max-height: 88px;
   }
 
   .customers {
-    padding: 96px 0 96px 0;
+    padding: 96px 0 24px 92px;
+  }
+
+  .footer > .container {
+    max-width: 554px;
+    max-height: 456px;
+  }
+
+  .footer-logo {
+  }
+
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .f-tablet {
+    display: flex;
+  }
+
+  .subscribe-form {
+    display: flex;
+    align-items: center;
+    margin-left: 80px;
+  }
+
+  .footer {
+    width: 768px;
+  }
+
+  .f-logo {
+    width: 264px;
+    margin-left: 320px;
+    margin-top: 30px;
+  }
+
+  .subscribe {
+    display: flex;
+  }
+
+  .subscribe-button {
+    margin-left: 24px;
+    margin-bottom: 18px;
+  }
+
+  .footer-icons. {
+    margin-bottom: 240px;
+  }
+
+  .soc-media-tablet {
+    margin-top: 0px;
+    margin-left: 10px;
+  }
+
+  .subscribe-input {
+    margin-left: 100px;
+    max-width: 264px;
   }
 }
 /*------------------------------------------*/
 @media screen and (min-width: 1158px) {
   .container {
-    max-width: 1158px;
+    max-width: 1440px;
+  }
+
+  .hero > .container {
+    max-width: 1440px;
+    max-height: 600px;
+  }
+
+  .hero {
+    padding: 188px 472px 292px 472px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
+    max-width: 1440px;
+    max-height: 600px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-rsolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/people-office-2x.jpg);
+    }
+  }
+
+  .hero-title {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--white-color);
+    max-width: 496px;
+    min-height: 120px;
+    margin-bottom: 48px;
+  }
+
+  .hero-btn {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    padding: 16px 32px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: var(--white-color);
+    background-color: var(--blue-color);
+    cursor: pointer;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    margin-left: 14px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .benefits {
+    padding: 120px 0;
   }
 
   .benefits-list {
@@ -397,7 +559,38 @@
     width: calc((100% - 72px) / 4);
   }
 
+  .benefits-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+  }
+
+  .benefits-subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--second-color);
+    margin-bottom: 8px;
+  }
+
+  .benefits-icons {
+    max-width: 264px;
+  }
+
+  .benefits-item-text {
+    max-width: 264px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+
   .our-team-images-bkg {
+    width: 100%;
     width: calc((100% - 72px) / 4);
   }
 
@@ -411,5 +604,106 @@
 
   .customers {
     padding: 96px 0 96px 0;
+  }
+
+  .f-logo {
+    margin-right: 120px;
+    align-items: baseline;
+  }
+
+  .footer-logo {
+    display: inline-block;
+    font-family: "Raleway", sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    color: var(--blue-color);
+    background: var(--second-color);
+    text-transform: uppercase;
+    margin-bottom: 16px;
+  }
+
+  .footer-p-logo {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--dark-white-color);
+    background: var(--second-color);
+    max-width: 264px;
+    display: flex;
+    align-items: baseline;
+  }
+
+  .footer-logo .studio {
+    color: var(--dark-white-color);
+  }
+
+  .footer {
+    background: var(--second-color);
+    padding: 100px 0;
+    display: flex;
+    align-items: baseline;
+  }
+
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+  }
+
+  .footer-p-soc {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--white-color);
+    margin-bottom: 16px;
+  }
+
+  .footer-icons {
+    display: flex;
+    gap: 16px;
+  }
+
+  .f-icon {
+    width: 40px;
+    height: 40px;
+  }
+
+  .f-link {
+    width: 100%;
+    height: 100%;
+    background-color: var(--blue-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .f-link:hover {
+    width: 100%;
+    height: 100%;
+    background-color: var(--blue-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #31d0aa;
+  }
+
+  .f-link:focus {
+    width: 100%;
+    height: 100%;
+    background-color: var(--blue-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #31d0aa;
+  }
+
+  .f-soc-logo {
+    fill: var(--dark-white-color);
   }
 }
