--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,7 @@ img {
 }
 
 .hero-btn {
-  display: block;
+  /*display: block;
   min-width: 169px;
   height: 56px;
   /*padding: 16px 32px;*/
@@ -529,8 +529,8 @@ img {
 
 .customers-icons {
   /*width: calc((100% - 120px) / 6);*/
-  height: 160px;
-  width: 100%;
+  /*height: 160px;*/
+  /*width: 100%;*/
 }
 
 .customers-link {
@@ -624,7 +624,7 @@ img {
 
 .f-logo {
   /*margin-right: 120px;*/
-  align-items: baseline;
+  /*align-items: baseline;*/
 }
 
 .footer-logo {
@@ -648,7 +648,7 @@ img {
   background: var(--second-color);
   max-width: 264px;
   display: flex;
-  align-items: baseline;
+  /*align-items: baseline;*/
 }
 
 .footer-logo .studio {
